# hello-123

./: .gitignore  .phase4-review-fix.patch  .phase5-date-refinement-fix.py  .phase5-review-fix.py  .phase6-review-fix.patch  .phase7-hardening.patch  FREEZE_MANIFEST.json  MANIFEST.in  PHASE5-SCOPE.md  PROJECT_STATUS.yaml  README.md  SKILL.md  pyproject.toml
.final-freeze/: chunk-00  chunk-01  chunk-02  chunk-03  chunk-04  chunk-05  chunk-05-00  chunk-05-01  chunk-05-02  chunk-05-03  chunk-05-04  chunk-05-05
.github/: assembly-checkout-trigger.txt  phase8-binding-fix-trigger.txt  source-provenance-trigger.txt  stage8-r3-status.patch.gz.b64  v59-delta-trigger.txt
.phase4-upload/: repair-block.txt  repair.b64
.phase5-upload/: hybrid_00  hybrid_01  hybrid_02  hybrid_03  hybrid_04  hybrid_05  test_adv_00  test_adv_tail.txt  test_main_00  test_main_01  test_main_02
.stage2/: chapter-project-fixes.patch
.stage4/: apply_character_fixture_fix.py  apply_character_support_assertion_fix.py  apply_skill_stage4_contract.py
.stage5/: apply_reasoning_contract_refinement.py  apply_skill_stage5_contract.py
.stage6/: bootstrap_fix_tests.py  r2-canonical-compat.patch  r2-remediation.patch  remediation.patch.01  remediation.patch.02  remediation.patch.03  remediation.patch.04  remediation.patch.05  remediation.patch.06
.stage7/: assertion-order.patch  cross-store-test.patch  cross-store-verification.patch  foundation-fixes.patch  regression-fixes.patch  skill-command-section.patch
.stage72/: engine-build.patch  engine-insert.patch  engine-schema.patch  engine-top.patch  engine-verify.patch
acceptance/: final-freeze-summary.json  stage6-final-acceptance.yaml  stage6-r1-acceptance-summary.json
benchmark/: README.md  release_benchmark.py
docs/: .stage3-pr-ready  INSTALL.md  MIGRATION_STAGE5.md  SECURITY.md  STAGE1_EVIDENCE_ENGINE.md  STAGE1_EVIDENCE_ENGINE_RESULT.md  STAGE2_CHAPTER_STRUCTURE_ENGINE.md  STAGE2_CHAPTER_STRUCTURE_ENGINE_RESULT.md  STAGE3_EVENT_CAUSALITY_ENGINE.md  STAGE3_EVENT_CAUSALITY_ENGINE_RESULT.md  STAGE4_FOCUSED_CHARACTER_ENGINE.md  STAGE4_FOCUSED_CHARACTER_ENGINE_RESULT.md  STAGE5_LAYERED_REASONING_ENGINE.md  STAGE5_LAYERED_REASONING_ENGINE_RESULT.md  STAGE6_NOTION_KNOWLEDGE_SYSTEM.md  STAGE6_NOTION_KNOWLEDGE_SYSTEM_RESULT.md  STAGE7_LITERARY_ENGINE.md  STAGE7_LITERARY_REGRESSION_BENCHMARK.md  STAGE8_FINAL_PRODUCTIZATION_ACCEPTANCE.md  STAGE8_R1_PRIVATE_ACCEPTANCE_OPERATIONS.md  STAGE8_R2_NEWLINE_FIX_TRIGGER.md  STAGE8_R3_SEMANTIC_PRECISION.md  STAGE8_R3_TRIGGER.md  STAGE8_R4_PRIVATE_INTAKE_SIMULATION.md  final-freeze-v5.9.0.md  phase8-security-notes.md  stage-1-result.md  stage-2-result.md  stage-3-result.md  stage-4-result.md  stage-5-result.md  stage-6-final-acceptance.md  stage-6-r1-final-acceptance.md
examples/: minimal-corpus.txt  questions.jsonl
profiles/: balanced.json  high-recall.json  strict.json
schemas/: accepted-claim-record.schema.json  anomaly-finding.schema.json  anomaly-report.schema.json  canonical-chapter.schema.json  canonical-order.schema.json  causal-event.schema.json  chapter-finding.schema.json  chapter-project-report.schema.json  chapter-project-verification.schema.json  chapter-source-binding.schema.json  character-annotation.schema.json  character-attribute.schema.json  character-event-link.schema.json  character-project-report.schema.json  character-project-verification.schema.json  character-relationship.schema.json  character-state.schema.json  claim-evidence-edge.schema.json  claim-graph-report.schema.json  engineering-build-result.schema.json  engineering-build-state.schema.json  engineering-profile.schema.json  engineering-validation.schema.json  event-annotation.schema.json  event-causal-edge.schema.json  event-component.schema.json  event-project-report.schema.json  event-project-verification.schema.json  evidence-coverage.schema.json  evidence-unit.schema.json  final-acceptance-approval.schema.json  final-acceptance-candidate.schema.json  final-acceptance-seal.schema.json  final-acceptance-verification.schema.json  focused-character.schema.json  heading-candidate.schema.json  knowledge-answer-packet.schema.json  knowledge-answer-verification.schema.json  knowledge-project-manifest.schema.json  knowledge-project-report.schema.json  (+41 more)
scripts/: tkr.py
status/: STAGE8_R4_PUBLIC_STATUS.yaml
tests/: test_admission.py  test_anomaly_detection.py  test_chapter_cli.py  test_chapter_engine.py  test_chapter_ordering.py  test_chapter_project.py  test_character_engine.py  test_character_project.py  test_chunking.py  test_chunking_phase2.py  test_claim_validation.py  test_claim_validation_adversarial.py  test_encoding_inspection.py  test_engineering_productization.py  test_entity_ambiguity_fact_blocking.py  test_entity_normalization.py  test_entity_normalization_adversarial.py  test_event_engine.py  test_event_project.py  test_evidence_claims.py  test_evidence_engine.py  test_evidence_project.py  test_exact_source_newlines.py  test_final_acceptance.py  test_freeze_assembly_paths.py  test_gold_benchmark.py  test_gold_benchmark_adversarial.py  test_hashing.py  test_hybrid_retrieval.py  test_hybrid_retrieval_adversarial.py  test_knowledge_project.py  test_literary_benchmark.py  test_literary_crlf.py  test_literary_engine.py  test_literary_evidence_contamination.py  test_notion_engine.py  test_notion_project.py  test_notion_stage6_r1.py  test_private_artifact_guard.py  test_r3_runtime_identity.py  (+12 more)
tkr/: __init__.py  admission.py  anomaly_artifacts.py  anomaly_cli.py  anomaly_detection.py  chapter_cli.py  chapter_engine.py  chapter_ordering.py  chapter_project.py  character_cli.py  character_engine.py  character_project.py  chunking.py  claim_cli.py  claim_validation.py  cli.py  encoding_inspection.py  engineering.py  entity_cli.py  entity_normalization.py  event_cli.py  event_engine.py  event_project.py  evidence_claims.py  evidence_cli.py  evidence_engine.py  evidence_project.py  final_acceptance.py  final_acceptance_cli.py  gold_benchmark.py  gold_benchmark_cli.py  gold_hard_negatives.py  hashing.py  heading_detection.py  (+45 more)
(+93 files in other folders)
