[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "text-knowledge-reader-core"
version = "6.0.0-alpha1"
description = "Auditable long-text ingestion, source-bound Evidence Engine, chapter-addressable literary knowledge, epistemic-tier separation, strict evidence QA, and recoverable builds"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Text Knowledge Reader project"}]
dependencies = []

[project.scripts]
tkr-chunk = "tkr.cli:main"
tkr-claim-validate = "tkr.claim_cli:main"
tkr-entity-normalize = "tkr.entity_cli:main"
tkr-retrieval = "tkr.retrieval_cli:main"
tkr-strict-qa = "tkr.strict_qa_cli:main"
tkr-gold-benchmark = "tkr.gold_benchmark_cli:main"
tkr-release-freeze = "tkr.release_freeze_cli:main"
tkr-anomaly-scan = "tkr.anomaly_cli:main"
tkr-structure-index = "tkr.structure_cli:main"
tkr-semantic-extract = "tkr.semantic_cli:main"
tkr-project = "tkr.project_cli:main"
tkr-skill = "tkr.skill_cli:main"
tkr-literary = "tkr.literary_cli:main"
tkr-evidence = "tkr.evidence_cli:main"

[tool.setuptools.packages.find]
include = ["tkr*"]

[tool.setuptools.data-files]
"share/text-knowledge-reader" = [
  "SKILL.md",
  "README.md",
  "PROJECT_STATUS.yaml",
  "pyproject.toml",
]
"share/text-knowledge-reader/tkr" = [
  "tkr/__init__.py",
]
"share/text-knowledge-reader/schemas" = [
  "schemas/anomaly-finding.schema.json",
  "schemas/anomaly-report.schema.json",
  "schemas/heading-candidate.schema.json",
  "schemas/unit-record.schema.json",
  "schemas/structure-finding.schema.json",
  "schemas/structure-report.schema.json",
  "schemas/semantic-candidate.schema.json",
  "schemas/semantic-finding.schema.json",
  "schemas/model-extraction-task.schema.json",
  "schemas/accepted-claim-record.schema.json",
  "schemas/semantic-report.schema.json",
  "schemas/knowledge-project-report.schema.json",
  "schemas/knowledge-project-manifest.schema.json",
  "schemas/knowledge-project-verification.schema.json",
  "schemas/knowledge-answer-packet.schema.json",
  "schemas/knowledge-answer-verification.schema.json",
  "schemas/engineering-profile.schema.json",
  "schemas/engineering-build-result.schema.json",
  "schemas/engineering-build-state.schema.json",
  "schemas/skill-audit-report.schema.json",
  "schemas/skill-doctor-report.schema.json",
  "schemas/literary-annotation.schema.json",
  "schemas/literary-report.schema.json",
  "schemas/literary-query-packet.schema.json",
  "schemas/literary-evidence-anchor.schema.json",
  "schemas/literary-assertion.schema.json",
  "schemas/literary-entity.schema.json",
  "schemas/literary-relationship.schema.json",
  "schemas/literary-event.schema.json",
  "schemas/evidence-unit.schema.json",
  "schemas/evidence-coverage.schema.json",
  "schemas/claim-evidence-edge.schema.json",
  "schemas/claim-graph-report.schema.json",
]
"share/text-knowledge-reader/profiles" = [
  "profiles/balanced.json",
  "profiles/strict.json",
  "profiles/high-recall.json",
]
"share/text-knowledge-reader/examples" = [
  "examples/minimal-corpus.txt",
  "examples/questions.jsonl",
]
"share/text-knowledge-reader/docs" = [
  "docs/INSTALL.md",
  "docs/SECURITY.md",
  "docs/MIGRATION_STAGE5.md",
  "docs/STAGE7_LITERARY_ENGINE.md",
  "docs/STAGE1_EVIDENCE_ENGINE.md",
]
