[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "text-knowledge-reader-core"
version = "6.0.0-alpha1"
description = "Auditable long-text ingestion, source-bound evidence, canonical chapter structure, focused event and character models, layered A/B/C/H reasoning, strict QA, and recoverable builds"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Text Knowledge Reader project"}]
dependencies = []

[project.scripts]
tkr-chunk = "tkr.cli:main"
tkr-claim-validate = "tkr.claim_cli:main"
tkr-entity-normalize = "tkr.entity_cli:main"
tkr-retrieval = "tkr.retrieval_cli:main"
tkr-strict-qa = "tkr.strict_qa_cli:main"
tkr-gold-benchmark = "tkr.gold_benchmark_cli:main"
tkr-release-freeze = "tkr.release_freeze_cli:main"
tkr-anomaly-scan = "tkr.anomaly_cli:main"
tkr-structure-index = "tkr.structure_cli:main"
tkr-semantic-extract = "tkr.semantic_cli:main"
tkr-project = "tkr.project_cli:main"
tkr-skill = "tkr.skill_cli:main"
tkr-literary = "tkr.literary_cli:main"
tkr-evidence = "tkr.evidence_cli:main"
tkr-chapter = "tkr.chapter_cli:main"
tkr-event = "tkr.event_cli:main"
tkr-character = "tkr.character_cli:main"
tkr-reason = "tkr.reasoning_cli:main"
tkr-notion = "tkr.notion_cli:main"

[tool.setuptools.packages.find]
include = ["tkr*"]

[tool.setuptools.data-files]
"share/text-knowledge-reader" = [
  "SKILL.md",
  "README.md",
  "PROJECT_STATUS.yaml",
  "pyproject.toml",
]
"share/text-knowledge-reader/tkr" = [
  "tkr/__init__.py",
]
"share/text-knowledge-reader/schemas" = [
  "schemas/anomaly-finding.schema.json",
  "schemas/anomaly-report.schema.json",
  "schemas/heading-candidate.schema.json",
  "schemas/unit-record.schema.json",
  "schemas/structure-finding.schema.json",
  "schemas/structure-report.schema.json",
  "schemas/semantic-candidate.schema.json",
  "schemas/semantic-finding.schema.json",
  "schemas/model-extraction-task.schema.json",
  "schemas/accepted-claim-record.schema.json",
  "schemas/semantic-report.schema.json",
  "schemas/knowledge-project-report.schema.json",
  "schemas/knowledge-project-manifest.schema.json",
  "schemas/knowledge-project-verification.schema.json",
  "schemas/knowledge-answer-packet.schema.json",
  "schemas/knowledge-answer-verification.schema.json",
  "schemas/engineering-profile.schema.json",
  "schemas/engineering-build-result.schema.json",
  "schemas/engineering-build-state.schema.json",
  "schemas/skill-audit-report.schema.json",
  "schemas/skill-doctor-report.schema.json",
  "schemas/literary-annotation.schema.json",
  "schemas/literary-report.schema.json",
  "schemas/literary-query-packet.schema.json",
  "schemas/literary-evidence-anchor.schema.json",
  "schemas/literary-assertion.schema.json",
  "schemas/literary-entity.schema.json",
  "schemas/literary-relationship.schema.json",
  "schemas/literary-event.schema.json",
  "schemas/evidence-unit.schema.json",
  "schemas/evidence-coverage.schema.json",
  "schemas/claim-evidence-edge.schema.json",
  "schemas/claim-graph-report.schema.json",
  "schemas/chapter-source-binding.schema.json",
  "schemas/canonical-chapter.schema.json",
  "schemas/chapter-finding.schema.json",
  "schemas/canonical-order.schema.json",
  "schemas/chapter-project-report.schema.json",
  "schemas/chapter-project-verification.schema.json",
  "schemas/causal-event.schema.json",
  "schemas/event-component.schema.json",
  "schemas/event-causal-edge.schema.json",
  "schemas/event-annotation.schema.json",
  "schemas/event-project-report.schema.json",
  "schemas/event-project-verification.schema.json",
  "schemas/focused-character.schema.json",
  "schemas/character-attribute.schema.json",
  "schemas/character-state.schema.json",
  "schemas/character-relationship.schema.json",
  "schemas/character-event-link.schema.json",
  "schemas/character-annotation.schema.json",
  "schemas/character-project-report.schema.json",
  "schemas/character-project-verification.schema.json",
  "schemas/reasoning-node.schema.json",
  "schemas/reasoning-edge.schema.json",
  "schemas/reasoning-finding.schema.json",
  "schemas/reasoning-annotation.schema.json",
  "schemas/reasoning-project-report.schema.json",
  "schemas/reasoning-project-verification.schema.json",
  "schemas/layered-answer-packet.schema.json",
  "schemas/notion-page.schema.json",
  "schemas/notion-relation.schema.json",
  "schemas/notion-review-item.schema.json",
  "schemas/notion-sync-ledger.schema.json",
  "schemas/notion-sync-action.schema.json",
  "schemas/notion-workspace-schema.schema.json",
  "schemas/notion-project-report.schema.json",
  "schemas/notion-project-manifest.schema.json",
  "schemas/notion-project-verification.schema.json",
]
"share/text-knowledge-reader/profiles" = [
  "profiles/balanced.json",
  "profiles/strict.json",
  "profiles/high-recall.json",
]
"share/text-knowledge-reader/examples" = [
  "examples/minimal-corpus.txt",
  "examples/questions.jsonl",
]
"share/text-knowledge-reader/docs" = [
  "docs/INSTALL.md",
  "docs/SECURITY.md",
  "docs/MIGRATION_STAGE5.md",
  "docs/STAGE7_LITERARY_ENGINE.md",
  "docs/STAGE1_EVIDENCE_ENGINE.md",
  "docs/STAGE1_EVIDENCE_ENGINE_RESULT.md",
  "docs/STAGE2_CHAPTER_STRUCTURE_ENGINE.md",
  "docs/STAGE2_CHAPTER_STRUCTURE_ENGINE_RESULT.md",
  "docs/STAGE3_EVENT_CAUSALITY_ENGINE.md",
  "docs/STAGE3_EVENT_CAUSALITY_ENGINE_RESULT.md",
  "docs/STAGE4_FOCUSED_CHARACTER_ENGINE.md",
  "docs/STAGE4_FOCUSED_CHARACTER_ENGINE_RESULT.md",
  "docs/STAGE5_LAYERED_REASONING_ENGINE.md",
  "docs/STAGE5_LAYERED_REASONING_ENGINE_RESULT.md",
  "docs/STAGE6_NOTION_KNOWLEDGE_SYSTEM.md",
  "docs/STAGE6_NOTION_KNOWLEDGE_SYSTEM_RESULT.md",
]
